# contract-system

./: .gitignore  Git协作指南.md  P4-README.md  README.md  启动Prompt-按角色.md  启动演示.bat  头脑风暴过程.md  实施计划.md  概要设计.md
backend/: .env.example  pyproject.toml
backend/app/: bootstrap.py  config.py  demo_seed.py  main.py
backend/app/api/: dependencies.py  errors.py
backend/app/api/routes/: admin.py  auth.py  contracts.py  internal.py  templates.py
backend/app/domain/: enums.py  models.py
backend/app/repositories/: json_repository.py  protocols.py
backend/app/schemas/: auth.py  contracts.py  messages.py  templates.py  users.py
backend/app/security/: passwords.py  sessions.py
backend/app/services/: admin_service.py  approval_service.py  auth_service.py  contract_service.py  message_service.py  template_service.py
backend/app/storage/: json_store.py
backend/backend/data/: store.json
backend/tests/: conftest.py  test_admin_routes.py  test_auth_routes.py  test_contract_routes.py  test_internal_routes.py  test_storage.py  test_template_routes.py
docs/: Git协作指南.md  P4-README.md  启动Prompt-按角色.md  实施计划.md  概要设计.md  测试报告.md  演示脚本.md  需求分析.md
frontend/assets/css/: style.css
frontend/assets/js/: admin.js  api-client.js  form-utils.js  handler.js  internal.js  session-ui.js
frontend/pages/admin/: stats.html  templates.html  users.html
frontend/pages/handler/: contract-detail.html  contract-edit.html  contract-form.html  contracts.html  dashboard.html
frontend/pages/internal/: approval.html  messages.html
frontend/pages/public/: login.html
